# wmc-win

./: Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.ps1
manifests/: Set-Paths.ps1  me.f1u77y.web_media_controller.chromium.json  me.f1u77y.web_media_controller.firefox.json
src/: main.rs
wix/: main.wxs
